MSP/Building_DVWA_platform_by_using_AWS_ECS/terraform/sg.tf

resource "aws_security_group" "sg" {
  name        = "kiki-sg"
  description = "Allow TLS inbound traffic"
  vpc_id      = aws_vpc.kiki-VPC.id

  ingress {
    description = "TLS from VPC"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = [aws_vpc.kiki-VPC.cidr_block]
  }

  ingress {
    description = "TLS from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = [aws_vpc.kiki-VPC.cidr_block]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_tls"
  }
}
